--- a/style/profile.css
+++ b/style/profile.css
@@ -104,6 +104,8 @@ input[type="submit"]:hover {
     display: flex;
     flex-direction: column;
     height: 100%;
+    align-items: center;
+    overflow: scroll;
 }
 
 .prevBtn, .nextBtn {
